--- a/frontend/package.json
+++ b/frontend/package.json
@@ -29,10 +29,12 @@
     "babel-jest": "^29.7.0",
     "eslint": "^8.54.0",
     "eslint-plugin-react": "^7.33.2",
+    "identity-obj-proxy": "^3.0.0",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
     "postcss": "^8.4.31",
     "tailwindcss": "^3.3.6",
+    "terser": "^5.44.1",
     "vite": "^5.0.8"
   },
   "engines": {
