--- a/frontend/nginx.conf
+++ b/frontend/nginx.conf
@@ -22,6 +22,21 @@ server {
         add_header Cache-Control "public, max-age=3600";
     }
 
+    # API proxy: forward /api requests to backend service
+    location /api {
+        proxy_pass http://todo-api:3000/api;
+        proxy_http_version 1.1;
+        proxy_set_header Upgrade $http_upgrade;
+        proxy_set_header Connection 'upgrade';
+        proxy_set_header Host $host;
+        proxy_cache_bypass $http_upgrade;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_set_header X-Forwarded-Proto $scheme;
+        proxy_read_timeout 90s;
+        proxy_connect_timeout 90s;
+    }
+
     # SPA routing: rewrite all non-file requests to index.html
     location / {
         try_files $uri $uri/ /index.html;
